--- a/2-Traefik/traefik-internal-service.yaml
+++ b/2-Traefik/traefik-internal-service.yaml
@@ -21,7 +21,6 @@ spec:
       port: 8080
       name: metrics
   type: LoadBalancer
-  loadBalancerIP: 192.168.1.20
 ---
 apiVersion: extensions/v1beta1
 kind: Ingress
@@ -30,7 +29,7 @@ metadata:
   namespace: kube-system
 spec:
   rules:
-  - host: traefik.internal.carlosedp.com
+  - host: traefik.internal.gad.cloud
     http:
       paths:
       - path: /
