--- a/4-Dashboard/external-ingress.yaml
+++ b/4-Dashboard/external-ingress.yaml
@@ -14,7 +14,7 @@ metadata:
     ingress.kubernetes.io/auth-secret: ingress-auth
 spec:
   rules:
-  - host: dashboard.cloud.carlosedp.com
+  - host: dashboard.cloud.gad.cloud
     http:
       paths:
       - path: /
