updated to latest changes

--- a/2-Traefik/traefik-internal-service.yaml
+++ b/2-Traefik/traefik-internal-service.yaml
@@ -1,39 +1,31 @@
 ---
-kind: Service
 apiVersion: v1
+kind: Service
 metadata:
-  name: traefik-ingress-service
-  namespace: kube-system
-  labels:
-    app: traefik
+  name: traefik-dashboard-service
+
 spec:
-  selector:
-    k8s-app: traefik-ingress-lb
-  externalTrafficPolicy: Local
-  ports:
-    - protocol: TCP
-      port: 80
-      name: web
-    - protocol: TCP
-      port: 443
-      name: https
-    - protocol: TCP
-      port: 8080
-      name: metrics
   type: LoadBalancer
+  ports:
+    - port: 8080
+      targetPort: dashboard
+  selector:
+    app: traefik
 ---
-apiVersion: extensions/v1beta1
-kind: Ingress
+apiVersion: v1
+kind: Service
 metadata:
-  name: traefik-ingress-lb
-  namespace: kube-system
+  name: traefik-web-service
+
 spec:
-  rules:
-  - host: traefik.internal.gad.cloud
-    http:
-      paths:
-      - path: /
-        backend:
-          serviceName: traefik-ingress-service
-          servicePort: admin
+  type: LoadBalancer
+  ports:
+    - name: traefic-http
+      targetPort: web
+      port: 80
+    - name: traefic-https
+      targetPort: websecure
+      port: 443
+  selector:
+    app: traefik
 
