--- a/2-Traefik/traefik-internal-deployment.yaml
+++ b/2-Traefik/traefik-internal-deployment.yaml
@@ -2,66 +2,34 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: traefik-ingress-controller
-  namespace: kube-system
+  name: traefik-account
 ---
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  name: traefik-ingress-controller
-  namespace: kube-system
+  name: traefik-deployment
   labels:
-    k8s-app: traefik-ingress-lb
+    app: traefik
+
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      k8s-app: traefik-ingress-lb
+      app: traefik
   template:
     metadata:
       labels:
-        k8s-app: traefik-ingress-lb
-        name: traefik-ingress-lb
+        app: traefik
     spec:
-      serviceAccountName: traefik-ingress-controller
-      terminationGracePeriodSeconds: 60
+      serviceAccountName: traefik-account
       containers:
-        - image: traefik:v1.7
-          name: traefik-ingress-lb
-          volumeMounts:
-            - mountPath: /config
-              name: config
-          ports:
-            - name: http
-              containerPort: 80
-            - name: https
-              containerPort: 443
-            - name: admin
-              containerPort: 8080
+        - name: traefik
+          image: traefik:v2.9.5
           args:
-            - --api
-            - --kubernetes
-            - --configfile=/config/traefik.toml
-          livenessProbe:
-            httpGet:
-              path: /ping
-              port: 80
-            initialDelaySeconds: 3
-            periodSeconds: 3
-            timeoutSeconds: 1
-      affinity:
-        podAntiAffinity:
-          preferredDuringSchedulingIgnoredDuringExecution:
-            - weight: 100
-              podAffinityTerm:
-                labelSelector:
-                  matchExpressions:
-                    - key: k8s-app
-                      operator: In
-                      values:
-                        - traefik-ingress-lb
-                topologyKey: kubernetes.io/hostname
-      volumes:
-        - name: config
-          configMap:
-            name: traefik-conf
+            - --api.insecure
+            - --providers.kubernetesingress
+          ports:
+            - name: web
+              containerPort: 80
+            - name: dashboard
+              containerPort: 8080
