--- a/wordpress/mysql-statefulset.yaml
+++ b/wordpress/mysql-statefulset.yaml
@@ -231,7 +231,7 @@ spec:
       name: data
     spec:
       accessModes: ["ReadWriteOnce"]
-      storageClassName: cstor-disk-fast
+      storageClassName: longhorn-fast
       resources:
         requests:
           storage: 10Gi
